# django-wordpress-import

./: .gitignore  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  manage.py  pyproject.toml
django_wordpress_import/: urls.py  wsgi.py
django_wordpress_import/api/: apps.py  serializers.py  views.py
django_wordpress_import/importer/: admin.py  apps.py  client.py  importer.py
django_wordpress_import/importer/management/commands/: import.py
django_wordpress_import/importer/migrations/: 0001_initial.py  0002_alter_wpauthor_avatar_urls_alter_wpauthor_url.py  0003_alter_wpauthor_avatar_urls_alter_wpauthor_url.py  0004_alter_wpmedia_source_url.py  0005_alter_wpmedia_guid.py  0006_alter_wpmedia_link.py  0007_alter_wpcomment_author_avatar_urls_and_more.py  0008_alter_wpmedia_slug.py  0009_alter_wpauthor_link_alter_wpauthor_slug.py  0010_alter_wpauthor_name_alter_wpcategory_link_and_more.py
django_wordpress_import/importer/models/: __init__.py  abstract.py  author.py  category.py  comment.py  config.py  media.py  page.py  post.py  tag.py
django_wordpress_import/settings/: base.py  dev.py
wordpress.docker/: .env.example  docker-compose.yml  init.sh  setup.sh
